Fixes bform buttons not displaying correctly on mobile

--- a/chat/static/chat/css/base/_base.scss
+++ b/chat/static/chat/css/base/_base.scss
@@ -171,7 +171,7 @@ a {
       border-radius: 0;
       padding-right: 25px;
       padding-left: 25px;
-      min-height: 100%;
+      min-height: 52px;
 			}
 		.glyphicon, .glyphicon-search {
 			position: static;
