--- a/chat/static/chat/css/chat/_room.scss
+++ b/chat/static/chat/css/chat/_room.scss
@@ -121,7 +121,7 @@ $chatbox-width: 100%;
       padding-right: 25px;
       padding-left: 25px;
       border: 2px solid transparent;
-      min-height: 100%;
+      min-height: 59px;
     }
   }
 
